# ImageProcessing

./: CMakeLists.txt  Image.cpp  Image.h  ImageProcessing.h  Note.h  README.md  RGBPixel.cpp  RGBPixel.h  main.cpp
test/: CMakeLists.txt  ImageProcessingTest.cpp  ImageTests.cpp  RGBPixelTests.cpp  runAllTests.cpp
